syntax = "proto3";

package user.v1;
import "validate/validate.proto";

option go_package = "./userPb";

message Profile {
  string user_name = 1[json_name = "username"];
  string bio = 2;
  string image = 3;
  bool following = 4;
  string created_time = 6;
  string updated_time = 7;
}

message User {
  string user_name = 1[json_name = "username"];
  string bio = 2;
  string image = 3;
  string email = 4;
  string created_time = 6;
  string updated_time = 7;
  int64  user_id = 8;
}

message RegisterModel {
  string user_name = 1 [(validate.rules).string.min_len = 3, json_name = "username"];
  string email = 2 [(validate.rules).string.email = true];
  string bio = 3;
  string image = 4;
  string password = 5 [(validate.rules).string.min_len = 6];
}